[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-geo"
version = "0.2.1"
description = "Geospatial MCP server — give AI agents geocoding, routing, spatial ops, and OSM querying via the Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tabib Hasan"}]
keywords = ["mcp", "geospatial", "geocoding", "routing", "gis", "openstreetmap", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "mcp>=1.0.0",
    "shapely>=2.0",
    "pyproj>=3.5",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
files = ["pyogrio>=0.8", "geopandas>=0.14"]
raster = ["rasterio>=1.3", "rasterstats>=0.19"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-cov>=5", "respx>=0.21", "ruff>=0.4", "mypy>=1.9"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-cov>=5", "respx>=0.21", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
mcp-geo = "geo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
